Finish immutable internal value migration