@@ -8,40 +8,16 @@ import dev.slsk.internal.messaging.MessageCode;
 import dev.slsk.internal.messaging.MessageReader;
 import dev.slsk.internal.room.RoomTicker;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
-import java.util.Objects;
 
 /** An incoming list of tickers for a chat room. */
-public final class RoomTickerListNotification implements IncomingMessage {
+public record RoomTickerListNotification(String roomName, int tickerCount, List<RoomTicker> tickers)
+        implements IncomingMessage {
 
-    private final String roomName;
-    private final int tickerCount;
-    private final List<RoomTicker> tickers;
-
-    /** Creates a ticker-list notification. */
-    public RoomTickerListNotification(String roomName, int tickerCount, Iterable<? extends RoomTicker> tickers) {
-        this.roomName = roomName;
-        this.tickerCount = tickerCount;
-        Objects.requireNonNull(tickers, "tickers");
-        List<RoomTicker> copy = new ArrayList<>();
-        tickers.forEach(copy::add);
-        this.tickers = Collections.unmodifiableList(copy);
+    public RoomTickerListNotification {
+        tickers = List.copyOf(tickers);
     }
 
-    public String getRoomName() {
-        return roomName;
-    }
-
-    public int getTickerCount() {
-        return tickerCount;
-    }
-
-    public List<RoomTicker> getTickers() {
-        return tickers;
-    }
-
-    /** Parses a ticker-list notification. */
     public static RoomTickerListNotification fromByteArray(byte[] bytes) {
         MessageReader<MessageCode.Server> reader =
                 ServerMessageParser.reader(bytes, MessageCode.Server.ROOM_TICKERS, "RoomTickerListNotification", false);
